--- a/src/components/pilots/Pilots.module.css
+++ b/src/components/pilots/Pilots.module.css
@@ -1,8 +1,10 @@
 .cardContainer {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 30px;
+    margin: auto;
+    max-width: 1000px;
 }
 
 .pilotCard {
