--- a/src/components/pilots/Pilots.module.css
+++ b/src/components/pilots/Pilots.module.css
@@ -1,7 +1,7 @@
 .cardContainer {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     margin-top: 30px;
     margin: auto;
     max-width: 1000px;
